# O

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: calc.py  db.py  dfgh.py  main.py  repository.py
app/appl/: main.py  schemas.py
app/tests/: test_INVALID.py  test_calc.py
tests/: test_INVALID.py  test_calc.py  test_valid.py
