[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Denis Kozlow <deniskozlow01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.32"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
python-dateutil = "^2.9.0.post0"
pytest = "^8.3.2"
pandas = "^2.2.2"
httpx = "^0.27.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
